# CTestsProperties

./: CMakeLists.txt
subdir/: CMakeLists.txt
